feat: proper tm_addr handling
